--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="nav-link active" aria-current="page" href="#experiences">Expériences</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#contact">Contact</a>
+                            <a class="nav-link active" aria-current="page" href="#mm-contact">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" target="_blank" href="/assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">
@@ -228,12 +228,12 @@
         </section>
         <!-- Compétences -->
         <section id="competences" class="container-fluid">
-            <div class="titreCompetences text-start m-5">
+            <div class="titreCompetences text-start m-1">
                 Mes Compétences
             </div>
             <div class="row m-5">
                 <!-- Logiciel grpahique -->
-                <div class="col12 col-lg-4">
+                <div class="col12 col-lg-4 rainbow">
                     <div class="titreLogiciels text-center">
                         Conception graphique et interactive
                     </div>
@@ -265,62 +265,57 @@
                     </div>
                 </div>
                 <!-- Logiciel Front end -->
-                <div class="col12 col-lg-4">
+                <div class="col12 col-lg-4 rainbow">
                     <div class="titreLogiciels text-center">
                         Front-end
                     </div>
                     <div class="graphique">
                         <div class="bloc2">
                             <!-- HTML5 -->
-                            <div id="html5" class="logo">
+                            <div id="html5" class="logo2">
                                 <img src="/assets/img/HTML5_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <!-- CCS3 -->
-                            <div id="CSS3" class="logo">
+                            <div id="CSS3" class="logo2">
                                 <img src="/assets/img/CSS3_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                         </div>
                         <div class="bloc2">
                             <!-- Bootstrap -->
-                            <div id="bootstrap" class="logo">
+                            <div id="bootstrap" class="logo2">
                                 <img src="/assets/img/Bootstrap_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <!-- Javascript -->
-                            <div id="js" class="logo">
+                            <div id="js" class="logo2">
                                 <img src="/assets/img/JavaScript_logo.png" class="compLogo js img-fluid" alt="">
                             </div>
                         </div>
                         <div class="bloc2">
                             <!-- Jquery -->
-                            <div id="jquery" class="logo">
+                            <div id="jquery" class="logo2">
                                 <img src="/assets/img/Jquery-logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <!-- Wordpress -->
-                            <div id="WP" class="logo">
+                            <div id="WP" class="logo2">
                                 <img src="/assets/img/Wordpress_Blue_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col12 col-lg-4">
+                <!-- Logiciel Gestion de projet -->
+                <div class="col12 col-lg-4 rainbow">
                     <div class="titreLogiciels text-center">
                         Gestion de projet
                     </div>
                     <div class="graphique">
                         <div class="bloc2">
-                            <div id="ps" class="logo">
-                                <img src="/assets/img/adobe-photoshop-logo.png" class="compLogo img-fluid" alt="">
+                            <!-- Github -->
+                            <div id="github" class="logo3">
+                                <img src="/assets/img/Github_logo.png" class="compLogo img-fluid" alt="">
                             </div>
-                            <div id="ai" class="logo">
-                                <img src="/assets/img/Adobe_Illustrator_logo.png" class="compLogo img-fluid" alt="">
-                            </div>
-                        </div>
-                        <div class="bloc2">
-                            <div id="id" class="logo">
-                                <img src="/assets/img/Adobe_InDesign_logo.png" class="compLogo img-fluid" alt="">
-                            </div>
-                            <div id="xd" class="logo">
-                                <img src="/assets/img/Adobe_XD_logo.png" class="compLogo img-fluid" alt="">
+                            <!-- Trello -->
+                            <div id="trello" class="logo3">
+                                <img src="/assets/img/trello_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                         </div>
                     </div>
@@ -425,11 +420,44 @@
                 
             </div>
         </section>
+        <!-- Contact -->
+        <section id="mm-contact" class="container-fluid mm-contact">
+            <div class="titreContact">
+                Contact
+            </div>
+            <div class="row">
+                <!-- Photo -->
+                <div class="col-12 col-md-5">
+                    <img src="/assets/img/Mathieu3.PNG"  class="img-fluid imgContact" alt="">
+                </div>
+                <!-- Formulaire +++ -->
+                <div class="col-12 col-md-7">
+                    <div class="socialMediaContact">
+                        <!-- Facebook -->
+                        <a href="https://www.facebook.com/Metoulon" target="_blank" class="iconContact">
+                            <span class="iconify iconCon" data-icon="akar-icons:facebook-fill" style="color: #fff;"></span>
+                        </a>
+                        <!-- Instagram -->
+                        <a href="https://www.instagram.com/metoulon/" target="_blank" class="iconContact">
+                            <span class="iconify iconCon" data-icon="akar-icons:instagram-fill" style="color: #fff;"></span>
+                        </a>
+                        <!-- Linkedin -->
+                        <a href="https://www.linkedin.com/in/mathieu-mette/" target="_blank" class="iconContact">
+                            <span class="iconify iconCon" data-icon="akar-icons:linkedin-fill" style="color: #fff; font-size: 45px;"></span>
+                        </a>
+                        <!-- Whatsapp -->
+                        <a href="https://api.whatsapp.com/send?phone=0644354126" target="_blank" class="iconContact">
+                            <span class="iconify iconCon" data-icon="dashicons:whatsapp" style="color: #fff;"></span>                        
+                        </a>
+                        <!-- Mail -->
+                        <a href="mailto:mathieu@gmail.com" target="_blank" class="iconContact">
+                            <span class="iconify iconCon" data-icon="ci:mail" style="color: #fff; font-size: 45px;"></span>                        
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </secction>
     </main>
-    <!-- Contact -->
-    <footer id="contact">
-
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
