--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- CSS Perso -->
     <link rel="stylesheet" href="/assets/css/styles.css">
     <!-- Titre Page -->
-    <title>Découvrez toutes les informations sur Mathieu Mette</title>
+    <title>Mathieu METTE - Découvrez toutes les informations sur Mathieu Mette</title>
 </head>
 <body>
     <header>
@@ -233,7 +233,7 @@
             </div>
             <div class="row m-5">
                 <!-- Logiciel grpahique -->
-                <div class="col12 col-lg-4 rainbow">
+                <div class="col12 col-lg-4 rainbow1">
                     <div class="titreLogiciels text-center">
                         Conception graphique et interactive
                     </div>
@@ -265,7 +265,7 @@
                     </div>
                 </div>
                 <!-- Logiciel Front end -->
-                <div class="col12 col-lg-4 rainbow">
+                <div class="col12 col-lg-4 rainbow2">
                     <div class="titreLogiciels text-center">
                         Front-end
                     </div>
@@ -303,7 +303,7 @@
                     </div>
                 </div>
                 <!-- Logiciel Gestion de projet -->
-                <div class="col12 col-lg-4 rainbow">
+                <div class="col12 col-lg-4 rainbow1">
                     <div class="titreLogiciels text-center">
                         Gestion de projet
                     </div>
@@ -431,33 +431,64 @@
                     <img src="/assets/img/Mathieu3.PNG"  class="img-fluid imgContact" alt="">
                 </div>
                 <!-- Formulaire +++ -->
-                <div class="col-12 col-md-7">
-                    <div class="socialMediaContact">
-                        <!-- Facebook -->
-                        <a href="https://www.facebook.com/Metoulon" target="_blank" class="iconContact">
-                            <span class="iconify iconCon" data-icon="akar-icons:facebook-fill" style="color: #fff;"></span>
-                        </a>
-                        <!-- Instagram -->
-                        <a href="https://www.instagram.com/metoulon/" target="_blank" class="iconContact">
-                            <span class="iconify iconCon" data-icon="akar-icons:instagram-fill" style="color: #fff;"></span>
-                        </a>
-                        <!-- Linkedin -->
-                        <a href="https://www.linkedin.com/in/mathieu-mette/" target="_blank" class="iconContact">
-                            <span class="iconify iconCon" data-icon="akar-icons:linkedin-fill" style="color: #fff; font-size: 45px;"></span>
-                        </a>
-                        <!-- Whatsapp -->
-                        <a href="https://api.whatsapp.com/send?phone=0644354126" target="_blank" class="iconContact">
-                            <span class="iconify iconCon" data-icon="dashicons:whatsapp" style="color: #fff;"></span>                        
-                        </a>
-                        <!-- Mail -->
-                        <a href="mailto:mathieu@gmail.com" target="_blank" class="iconContact">
-                            <span class="iconify iconCon" data-icon="ci:mail" style="color: #fff; font-size: 45px;"></span>                        
-                        </a>
+                <div class="col-12 col-md-7 zoneFormulaire">
+                    <div id="ReseauxContact">
+                        <div class="titreSocialMediaContact text-start">
+                            <lord-icon src="https://cdn.lordicon.com/nobciafz.json" trigger="loop" colors="primary:#ffffff,secondary:#14131d" style="width:80px;height:80px">
+                        </lord-icon>                            
+                        Abonnes-toi pour les nouveautés
+                        </div>
+                        <div class="socialMediaContact">
+                            <!-- Facebook -->
+                            <a href="https://www.facebook.com/Metoulon" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="akar-icons:facebook-fill" style="color: #fff;"></span>
+                            </a>
+                            <!-- Instagram -->
+                            <a href="https://www.instagram.com/metoulon/" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="akar-icons:instagram-fill" style="color: #fff;"></span>
+                            </a>
+                            <!-- Linkedin -->
+                            <a href="https://www.linkedin.com/in/mathieu-mette/" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="akar-icons:linkedin-fill" style="color: #fff; font-size: 45px;"></span>
+                            </a>
+                        </div>
                     </div>
+                    <div id="methodContact">
+                        <div class="titreSocialMediaContact text-start">
+                            <lord-icon src="https://cdn.lordicon.com/zpxybbhl.json" trigger="loop" colors="primary:#ffffff,secondary:#14213d" style="width:80px;height:80px"></lord-icon>
+                            Si tu souhaites me contacter
+                        </div>
+                        <div class="methodContact">
+                            <!-- Whatsapp -->
+                            <a href="https://api.whatsapp.com/send?phone=0644354126" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="dashicons:whatsapp" style="color: #fff;"></span>                        
+                            </a>
+                            <!-- Mail -->
+                            <a href="mailto:mathieu@gmail.com" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="ci:mail" style="color: #fff; font-size: 45px;"></span>                        
+                            </a>
+                        </div>
+                    </div>
+                    <div id="formContact">
+                        <div class="titreSocialMediaContact text-start">
+                            <lord-icon src="https://cdn.lordicon.com/puvaffet.json" trigger="loop" colors="primary:#ffffff,secondary:#14131d" style="width:80px;height:80px"> </lord-icon>                            
+                            Tu as aprecié me découvrir alors laisse ton mail
+                            <div class="form-floating mb-3 contactForm d-flex">
+                                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                                <label for="floatingInput">Ton adresse Email </label>
+                                <input class="btn boutonValider" type="submit" value="Valider">
+                            </div>                        
+                        </div>
+                        <div class="methodContact">
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </secction>
     </main>
+    <script src="https://cdn.lordicon.com/lusqsztk.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
