--- a/index.html
+++ b/index.html
@@ -80,32 +80,32 @@
                     <div class="socialMedia">
                         <!-- Facebook -->
                         <a href="https://www.facebook.com/Metoulon" target="_blank">
-                            <span class="iconify icon mm-facebook" data-icon="akar-icons:facebook-fill" style="color: #fca311;"></span>
+                            <span class="iconify icon mm-facebook" data-icon="akar-icons:facebook-fill"></span>
                         </a>
                         <!-- Instagram -->
                         <a href="https://www.instagram.com/metoulon/" target="_blank">
-                            <span class="iconify icon mm-instagram" data-icon="akar-icons:instagram-fill" style="color: #fca311;"></span>
+                            <span class="iconify icon mm-instagram" data-icon="akar-icons:instagram-fill" ></span>
                         </a>
                         <!-- Linkedin -->
                         <a href="https://www.linkedin.com/in/mathieu-mette/" target="_blank">
-                            <span class="iconify icon mm-linkedin" data-icon="akar-icons:linkedin-fill" style="color: #fca311; font-size: 45px;"></span>
+                            <span class="iconify icon mm-linkedin" data-icon="akar-icons:linkedin-fill" style="; font-size: 45px;"></span>
                         </a>
                         <!-- Whatsapp -->
                         <a href="https://api.whatsapp.com/send?phone=0644354126" target="_blank">
-                            <span class="iconify icon mm-whatsapp" data-icon="dashicons:whatsapp" style="color: #fca311;"></span>                        
+                            <span class="iconify icon mm-whatsapp" data-icon="dashicons:whatsapp" ></span>                        
                         </a>
                         <!-- Mail -->
                         <a href="mailto:mathieu@gmail.com" target="_blank">
-                            <span class="iconify icon mm-gmail" data-icon="ci:mail" style="color: #fca311; font-size: 45px;"></span>                        
+                            <span class="iconify icon mm-gmail" data-icon="ci:mail" style="; font-size: 45px;"></span>                        
                         </a>
                         <!-- Cv pdf -->
                         <a target="_blank" href="/assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">
-                            <span class="iconify icon mm-cvPdf" data-icon="fa6-solid:file-pdf" style="color: #fca311; font-size: 45px;"></span>                        
+                            <span class="iconify icon mm-cvPdf" data-icon="fa6-solid:file-pdf" style="; font-size: 45px;"></span>                        
                         </a>
                     </div>
                     <!-- Bouton en savoir plus -->
                     <div class="aboutMe">
-                        <a href="#profil"class="button-aboutMe">En savoir plus</a>
+                        <a href="#profil" type="button" class="button-aboutMe">En savoir plus</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
@@ -127,7 +127,8 @@
                         <p>Je suis actuellement en formation "Webdesign et Communication Digitale" à La Manu, l'École des métiers du Numérique. </p> 
                         <p>Ancien responsable méthodes en mécaniques dans le domaine nucléaire, j'ai choisi de me reconvertir dans le webdesign afin d'élargir mon horizon professionnel et être au plus proche de ce que j'aime : créer du contenu pour le web.</p>
                         <p>Passionnée par le design graphique <span class="iconify" data-icon="carbon:application-web" style="color: #fca311;"></span>, le commerce <span class="iconify" data-icon="ic:baseline-business-center" style="color: #fca311;"></span> et le sport <span class="iconify" data-icon="mdi:rugby" style="color: #fca311;"></span>.</p>
-                        <p>je suis donc à l'affût des dernières tendances et n'hésite pas à tester à de nouvelles techniques et également de cultiver l'originalité.</p>
+                        <p>J'ai su acqurérir un esprit d'équipe et des methodes de management qui me permette de savoir gérer une équipe avec joie.</p>
+                        <p><span class="iconify-inline" data-icon="ri:team-fill" style="color: #fca311;"></span>Une équipe heureuse et encadrer c'est la clé <span class="iconify-inline" data-icon="fluent:key-multiple-20-filled" style="color: #fca311;"></span> de la réussite.</p>
                     </div>
                     <div class="col-12 col-md-4 d-flex justify-content-center">
                         <img src="/assets/img/mathieu_profil.png" class="img-fluid imgProfil" alt="">
