--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </a>
                         <!-- Linkedin -->
                         <a href="https://www.linkedin.com/in/mathieu-mette/" target="_blank">
-                            <span class="iconify icon mm-linkedin" data-icon="akar-icons:linkedin-fill" style="; font-size: 45px;"></span>
+                            <span class="iconify icon mm-linkedin" data-icon="akar-icons:linkedin-fill" style="font-size: 45px;"></span>
                         </a>
                         <!-- Whatsapp -->
                         <a href="https://api.whatsapp.com/send?phone=0644354126" target="_blank">
@@ -96,11 +96,11 @@
                         </a>
                         <!-- Mail -->
                         <a href="mailto:mathieu@gmail.com" target="_blank">
-                            <span class="iconify icon mm-gmail" data-icon="ci:mail" style="; font-size: 45px;"></span>                        
+                            <span class="iconify icon mm-gmail" data-icon="ci:mail" style="font-size: 45px;"></span>                        
                         </a>
                         <!-- Cv pdf -->
                         <a target="_blank" href="/assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">
-                            <span class="iconify icon mm-cvPdf" data-icon="fa6-solid:file-pdf" style="; font-size: 45px;"></span>                        
+                            <span class="iconify icon mm-cvPdf" data-icon="fa6-solid:file-pdf" style="font-size: 45px;"></span>                        
                         </a>
                     </div>
                     <!-- Bouton en savoir plus -->
