--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS Perso -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <!-- Titre Page -->
     <title>Mathieu METTE - Découvrez toutes les informations sur Mathieu Mette</title>
 </head>
@@ -186,7 +186,7 @@
                         <div class="carousel-item">
                             <div class="d-block text-light formcarou" alt="">
                                 <div class="titlemission colormission">
-                                    Brevet de Tecnicien Supérieur
+                                    Brevet de Technicien Supérieur
                                 </div>
                                 <div class="titlemission colormission">
                                     Conception de Produits Industriels
