--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <img src="/assets/img/Mathieu.PNG" class="img-fluid imgAccueil" alt="">
+                    <img src="assets/img/Mathieu.PNG" class="img-fluid imgAccueil" alt="">
                 </div>
             </div>
         </section>
@@ -131,7 +131,7 @@
                         <p><span class="iconify-inline" data-icon="ri:team-fill" style="color: #fca311;"></span>Une équipe heureuse et encadrer c'est la clé <span class="iconify-inline" data-icon="fluent:key-multiple-20-filled" style="color: #fca311;"></span> de la réussite.</p>
                     </div>
                     <div class="col-12 col-md-4 d-flex justify-content-center">
-                        <img src="/assets/img/mathieu_profil.png" class="img-fluid imgProfil" alt="">
+                        <img src="assets/img/mathieu_profil.png" class="img-fluid imgProfil" alt="">
                     </div>
                 </div>
             </div>
@@ -241,26 +241,26 @@
                     <div class="graphique">
                         <div class="bloc2">
                             <div id="ps" class="logo">
-                                <img src="/assets/img/adobe-photoshop-logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/adobe-photoshop-logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <div id="ai" class="logo">
-                                <img src="/assets/img/Adobe_Illustrator_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/Adobe_Illustrator_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                         </div>
                         <div class="bloc2">
                             <div id="id" class="logo">
-                                <img src="/assets/img/Adobe_InDesign_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/Adobe_InDesign_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <div id="xd" class="logo">
-                                <img src="/assets/img/Adobe_XD_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/Adobe_XD_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                         </div>
                         <div class="bloc2">
                             <div id="ae" class="logo">
-                                <img src="/assets/img/Adobe_After_Effects_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/Adobe_After_Effects_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <div id="pr" class="logo">
-                                <img src="/assets/img/Adobe_Premiere_Pro_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/Adobe_Premiere_Pro_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                         </div>
                     </div>
@@ -274,31 +274,31 @@
                         <div class="bloc2">
                             <!-- HTML5 -->
                             <div id="html5" class="logo2">
-                                <img src="/assets/img/HTML5_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/HTML5_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <!-- CCS3 -->
                             <div id="CSS3" class="logo2">
-                                <img src="/assets/img/CSS3_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/CSS3_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                         </div>
                         <div class="bloc2">
                             <!-- Bootstrap -->
                             <div id="bootstrap" class="logo2">
-                                <img src="/assets/img/Bootstrap_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/Bootstrap_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <!-- Javascript -->
                             <div id="js" class="logo2">
-                                <img src="/assets/img/JavaScript_logo.png" class="compLogo js img-fluid" alt="">
+                                <img src="assets/img/JavaScript_logo.png" class="compLogo js img-fluid" alt="">
                             </div>
                         </div>
                         <div class="bloc2">
                             <!-- Jquery -->
                             <div id="jquery" class="logo2">
-                                <img src="/assets/img/Jquery-logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/Jquery-logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <!-- Wordpress -->
                             <div id="WP" class="logo2">
-                                <img src="/assets/img/Wordpress_Blue_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/Wordpress_Blue_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                         </div>
                     </div>
@@ -312,11 +312,11 @@
                         <div class="bloc2">
                             <!-- Github -->
                             <div id="github" class="logo3">
-                                <img src="/assets/img/Github_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/Github_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                             <!-- Trello -->
                             <div id="trello" class="logo3">
-                                <img src="/assets/img/trello_logo.png" class="compLogo img-fluid" alt="">
+                                <img src="assets/img/trello_logo.png" class="compLogo img-fluid" alt="">
                             </div>
                         </div>
                     </div>
@@ -334,7 +334,7 @@
                 <div class="card">
                     <div class="cover closed navalgroup">
                         <div class="card_content">
-                            <img src="/assets/img/Naval_group.png" class="img-fluid" alt="" />
+                            <img src="assets/img/Naval_group.png" class="img-fluid" alt="" />
                         </div>
                     </div>
                     <div class="cover open">
@@ -361,7 +361,7 @@
                 <div class="card">
                     <div class="cover closed eleganceMarine">
                         <div class="card_content">
-                            <img src="/assets/img/elegance_marine_logo.png" class="img-fluid" alt="" />
+                            <img src="assets/img/elegance_marine_logo.png" class="img-fluid" alt="" />
                         </div>
                     </div>
                     <div class="cover open">
@@ -382,7 +382,7 @@
                 <div class="card">
                     <div class="cover closed cafeMaurice">
                     <div class="card_content">
-                        <img src="/assets/img/cafe_maurice.png" class="img-fluid" alt="" />
+                        <img src="assets/img/cafe_maurice.png" class="img-fluid" alt="" />
                     </div>
                     </div>
                     <div class="cover open">
@@ -402,7 +402,7 @@
                 <div class="card">
                     <div class="cover closed rotaryInternational">
                     <div class="card_content">
-                        <img src="/assets/img/rotary-international-vector-logo.png" class="img-fluid" alt="" />
+                        <img src="assets/img/rotary-international-vector-logo.png" class="img-fluid" alt="" />
                     </div>
                     </div>
                     <div class="cover open">
@@ -429,7 +429,7 @@
             <div class="row">
                 <!-- Photo -->
                 <div class="col-12 col-md-5">
-                    <img src="/assets/img/Mathieu3.PNG"  class="img-fluid imgContact" alt="">
+                    <img src="assets/img/Mathieu3.PNG"  class="img-fluid imgContact" alt="">
                 </div>
                 <!-- Formulaire +++ -->
                 <div class="col-12 col-md-7 zoneFormulaire">
