--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <a class="nav-link active" aria-current="page" href="#mm-contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" target="_blank" href="/assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">
+                            <a class="nav-link active" aria-current="page" target="_blank" href="assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">
                                 <span class="iconify-inline" data-icon="fa6-solid:file-pdf" style="color: #14213d; font-size: 30px;"></span>
                             </a>
                         </li>
@@ -99,7 +99,7 @@
                             <span class="iconify icon mm-gmail" data-icon="ci:mail" style="font-size: 45px;"></span>                        
                         </a>
                         <!-- Cv pdf -->
-                        <a target="_blank" href="/assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">
+                        <a target="_blank" href="assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">
                             <span class="iconify icon mm-cvPdf" data-icon="fa6-solid:file-pdf" style="font-size: 45px;"></span>                        
                         </a>
                     </div>
@@ -353,7 +353,7 @@
                             </div>
                         </div>
                     <div class="card_button">
-                        <a href="/assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">En savoir plus</a>
+                        <a href="assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">En savoir plus</a>
                     </div>
                     </div>
                 </div>
@@ -374,7 +374,7 @@
                             </div>
                         </div>
                         <div class="card_button">
-                            <a href="/assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">En savoir plus</a>
+                            <a href="assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">En savoir plus</a>
                         </div>
                     </div>
                 </div>
