--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" target="_blank" href="assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">
-                                <span class="iconify-inline" data-icon="fa6-solid:file-pdf" style="color: #14213d; font-size: 30px;"></span>
+                                CV <span class="iconify-inline" data-icon="fa6-solid:file-pdf" style="color: #14213d; font-size: 30px;"></span>
                             </a>
                         </li>
 
@@ -241,27 +241,51 @@
                     </div>
                     <div class="graphique">
                         <div class="bloc2">
+                            <!-- PS -->
                             <div id="ps" class="logo">
-                                <img src="assets/img/adobe-photoshop-logo.png" class="compLogo img-fluid" alt="">
+                                <div class="progress" id="progressPs">
+                                    <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <img src="assets/img/adobe-photoshop-logo.png" class="compLogo img-fluid" id="logoPs" alt="">
                             </div>
+                            <!-- AI -->
                             <div id="ai" class="logo">
-                                <img src="assets/img/Adobe_Illustrator_logo.png" class="compLogo img-fluid" alt="">
+                                <div class="progress" id="progressAi">
+                                    <div class="progress-bar " role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <img src="assets/img/Adobe_Illustrator_logo.png" class="compLogo img-fluid" id="logoAi" alt="">
                             </div>
                         </div>
                         <div class="bloc2">
+                            <!-- ID -->
                             <div id="id" class="logo">
-                                <img src="assets/img/Adobe_InDesign_logo.png" class="compLogo img-fluid" alt="">
+                                <div class="progress" id="progressId">
+                                    <div class="progress-bar " role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <img src="assets/img/Adobe_InDesign_logo.png" class="compLogo img-fluid" id="logoId" alt="">
                             </div>
+                            <!-- XD -->
                             <div id="xd" class="logo">
-                                <img src="assets/img/Adobe_XD_logo.png" class="compLogo img-fluid" alt="">
+                                <div class="progress" id="progressXd">
+                                    <div class="progress-bar " role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <img src="assets/img/Adobe_XD_logo.png" class="compLogo img-fluid" id="logoXd" alt="">
                             </div>
                         </div>
                         <div class="bloc2">
+                            <!-- AE -->
                             <div id="ae" class="logo">
-                                <img src="assets/img/Adobe_After_Effects_logo.png" class="compLogo img-fluid" alt="">
+                                <div class="progress" id="progressAe">
+                                    <div class="progress-bar " role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <img src="assets/img/Adobe_After_Effects_logo.png" class="compLogo img-fluid" id="logoAe" alt="">
                             </div>
+                            <!-- PR -->
                             <div id="pr" class="logo">
-                                <img src="assets/img/Adobe_Premiere_Pro_logo.png" class="compLogo img-fluid" alt="">
+                                <div class="progress" id="progressPr">
+                                    <div class="progress-bar " role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <img src="assets/img/Adobe_Premiere_Pro_logo.png" class="compLogo img-fluid" id="logoPr" alt="">
                             </div>
                         </div>
                     </div>
