--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&display=swap" rel="stylesheet">
         <!-- Filmo -->
-        <link href="//db.onlinewebfonts.com/c/2dd509271764ff079832bac8db2c5ac1?family=Filmotype+Austin" rel="stylesheet" type="text/css"/>        <link rel="stylesheet" href="https://use.typekit.net/dwe6cyb.css">
+        <link href="//db.onlinewebfonts.com/c/2dd509271764ff079832bac8db2c5ac1?family=Filmotype+Austin" rel="stylesheet" type="text/css"/>        
+        <link rel="stylesheet" href="https://use.typekit.net/dwe6cyb.css">
     <!-- Lien Iconify -->
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <!-- CSS Bootstrap -->
