--- a/new.html
+++ b/new.html
@@ -13,7 +13,9 @@
             <link href="//db.onlinewebfonts.com/c/2dd509271764ff079832bac8db2c5ac1?family=Filmotype+Austin" rel="stylesheet" type="text/css"/>        
             <link rel="stylesheet" href="https://use.typekit.net/dwe6cyb.css">
         <!-- Lien Iconify -->
-        <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+        <script src="https://code.iconify.design/2/2.2.1/iconify.min.js" defer></script>
+        <!-- Lien Font Awesome -->
+        <script src="https://kit.fontawesome.com/9c79bb18d6.js" crossorigin="anonymous" defer></script>
         <!-- CSS Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <!-- CSS Perso -->
@@ -130,79 +132,192 @@
         </section>
         <!-- Formations -->
         <section id="formations" class="container-fluid">
-            <div class="row text-end mm-titreFormations">
+            <div class=" text-end mm-titreFormations">
                 <!-- Titre Formation -->
-                <div class="col">
+                <div >
                     Formations
                 </div>
             </div>
             <!-- Carousel -->
-            <div id="carouselExampleControls" class="carousel slide formationCarousel" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <!-- LA MANU -->
-                    <div class="carousel-item active mm-lamanu">
-                        <div class="titlemission">
-                            Exécutive Program Communication Digitale et Design Web
-                        </div>
-                        <div class="colormission">
-                            La Manu - L'école des métiers du numérique
-                        </div>
-                        <p class="yearFormation">
-                            Mars 2022 - Septembre 2022
-                        </p>
-                        <div class="missions">
-                                <p>
-                                    <span class="iconify-inline" data-icon="bx:code-alt" style="color: #14213d;"></span> Concepteur Front (UX/UI)
-                                </p>
-                                <p>
-                                    <span class="iconify-inline" data-icon="carbon:communication-unified" style="color: #14213d;"></span> Social médias Manager
-                                </p>
-                        </div>
-                    </div>
-                    <!-- RYLA -->
-                    <div class="carousel-item mm-ryla">
-                        <div class="titlemission colormission">
-                            RYLA
-                        </div>
-                        <div class="titlemission colormission">
-                            Formation en Leadership & Management
-                        </div>
-                        <div class="colormission">
-                            <span class="iconify-inline" data-icon="simple-icons:rotaryinternational" style="color: #14213d;"></span> Rotary international
-                        </div>
-                        <p class="yearFormation">
-                            2017
-                        </p>
-                        <div class="missions">
-                            <p>Jean-Jacques TITON Consulting</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item mm-eucalyptus">
-                        <div class="titlemission colormission">
-                            Brevet de Technicien Supérieur
-                        </div>
-                        <div class="titlemission colormission">
-                            Conception de Produits Industriels
-                        </div>
-                        <div class="colormission">
-                            Lycée des Eucalyptus (06-Nice)
-                        </div>
-                        <p class="yearFormation">2010</p>
-                        <div class="missions">
-                            <p>Technicien de bureau d'études mécanique</p>
-                        </div>
-                    </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                    </button>
+            <!-- Bouton -->
+            <div class="row">
+                <div class="col-12 boutonCarousel">
+                    <a class="btn precedent" role="button" data-slide="btn prev">
+                        <i class="fa-solid fa-circle-left iconCarou"></i>
+                    </a>
+                    <a class="suivant" role="button" data-slide="next">
+                        <i class="fa-solid fa-circle-right iconCarou"></i>
+                    </a>
                 </div>
+            </div>
+            <!-- Carousel Image -->
+            <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row CarouselFormations">
+                            <!-- LA MANU -->
+                            <div class="col-6 card">
+                                <img src="assets/img/logo_La_Manu_formation.png" class="card-img-top" id="img-lamanu">
+                                <div class="card-body text-center">
+                                    <div class="titlemission">
+                                        Exécutive Program Communication Digitale et Design Web
+                                    </div>
+                                    <div class="colormission">
+                                        La Manu - L'école des métiers du numérique
+                                    </div>
+                                    <p class="yearFormation">
+                                        Mars 2022 - Septembre 2022
+                                    </p>
+                                    <div class="missions">
+                                            <p>
+                                                <span class="iconify-inline" data-icon="bx:code-alt" style="color: #14213d;"></span> Concepteur Front (UX/UI)
+                                            </p>
+                                            <p>
+                                                <span class="iconify-inline" data-icon="carbon:communication-unified" style="color: #14213d;"></span> Social médias Manager
+                                            </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 card">
+                                <img src="assets/img/logo_La_Manu_formation.png" class="card-img-top" id="img-lamanu">
+                                <div class="card-body text-center">
+                                    <div class="titlemission">
+                                        Exécutive Program Communication Digitale et Design Web
+                                    </div>
+                                    <div class="colormission">
+                                        La Manu - L'école des métiers du numérique
+                                    </div>
+                                    <p class="yearFormation">
+                                        Mars 2022 - Septembre 2022
+                                    </p>
+                                    <div class="missions">
+                                            <p>
+                                                <span class="iconify-inline" data-icon="bx:code-alt" style="color: #14213d;"></span> Concepteur Front (UX/UI)
+                                            </p>
+                                            <p>
+                                                <span class="iconify-inline" data-icon="carbon:communication-unified" style="color: #14213d;"></span> Social médias Manager
+                                            </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row CarouselFormations">
+                            <!-- LA MANU -->
+                            <div class="col-6 card">
+                                <img src="assets/img/cafe_maurice.png" class="card-img-top" id="img-lamanu">
+                                <div class="card-body text-center">
+                                    <div class="titlemission">
+                                        Exécutive Program Communication Digitale et Design Web
+                                    </div>
+                                    <div class="colormission">
+                                        La Manu - L'école des métiers du numérique
+                                    </div>
+                                    <p class="yearFormation">
+                                        Mars 2022 - Septembre 2022
+                                    </p>
+                                    <div class="missions">
+                                            <p>
+                                                <span class="iconify-inline" data-icon="bx:code-alt" style="color: #14213d;"></span> Concepteur Front (UX/UI)
+                                            </p>
+                                            <p>
+                                                <span class="iconify-inline" data-icon="carbon:communication-unified" style="color: #14213d;"></span> Social médias Manager
+                                            </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 card">
+                                <img src="assets/img/logo_La_Manu_formation.png" class="card-img-top" id="img-lamanu">
+                                <div class="card-body text-center">
+                                    <div class="titlemission">
+                                        Exécutive Program Communication Digitale et Design Web
+                                    </div>
+                                    <div class="colormission">
+                                        La Manu - L'école des métiers du numérique
+                                    </div>
+                                    <p class="yearFormation">
+                                        Mars 2022 - Septembre 2022
+                                    </p>
+                                    <div class="missions">
+                                            <p>
+                                                <span class="iconify-inline" data-icon="bx:code-alt" style="color: #14213d;"></span> Concepteur Front (UX/UI)
+                                            </p>
+                                            <p>
+                                                <span class="iconify-inline" data-icon="carbon:communication-unified" style="color: #14213d;"></span> Social médias Manager
+                                            </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-
+        <!-- Contact -->
+        <section id="mm-contact" class="container-fluid mm-contact">
+            <div class="titreContact">
+                Contact
+            </div>
+            <div class="row">
+                <!-- Photo -->
+                <div class="col-12 col-lg-5" id="zoneImgContact">
+                    <img src="assets/img/Mathieu3.PNG"  class="img-fluid imgContact" alt="">
+                </div>
+                <!-- Formulaire +++ -->
+                <div class="col-12 col-lg-7 zoneFormulaire">
+                    <div id="ReseauxContact text-center">
+                        <div class="titreSocialMediaContact text-center">
+                            <lord-icon src="https://cdn.lordicon.com/nobciafz.json" trigger="loop" colors="primary:#ffffff,secondary:#14131d" class="lordicon">
+                        </lord-icon>                            
+                        Abonnes-toi pour les nouveautés
+                        </div>
+                        <div class="socialMediaContact text-center">
+                            <!-- Facebook -->
+                            <a href="https://www.facebook.com/Metoulon" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="akar-icons:facebook-fill" style="color: #fff;"></span>
+                            </a>
+                            <!-- Instagram -->
+                            <a href="https://www.instagram.com/metoulon/" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="akar-icons:instagram-fill" style="color: #fff;"></span>
+                            </a>
+                            <!-- Linkedin -->
+                            <a href="https://www.linkedin.com/in/mathieu-mette/" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="akar-icons:linkedin-fill" style="color: #fff; font-size: 45px;"></span>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="methodContact text-center">
+                        <div class="titreSocialMediaContact text-center">
+                            <lord-icon src="https://cdn.lordicon.com/zpxybbhl.json" trigger="loop" colors="primary:#ffffff,secondary:#14213d" class="lordicon"></lord-icon>
+                            Si tu souhaites me contacter
+                        </div>
+                        <div class="methodContact text-center">
+                            <!-- Whatsapp -->
+                            <a href="https://api.whatsapp.com/send?phone=0644354126" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="dashicons:whatsapp" style="color: #fff;"></span>                        
+                            </a>
+                            <!-- Mail -->
+                            <a href="mailto:mathieu@gmail.com" target="_blank" class="iconContact">
+                                <span class="iconify iconCon" data-icon="ci:mail" style="color: #fff; font-size: 45px;"></span>                        
+                            </a>
+                        </div>
+                    </div>
+                    <div id="formContact">
+                        <div class="titreSocialMediaContact text-center">
+                            <lord-icon src="https://cdn.lordicon.com/puvaffet.json" trigger="loop" colors="primary:#ffffff,secondary:#14131d" class="lordicon"> </lord-icon>                            
+                            Tu as aprecié me découvrir alors laisse ton mail
+                            <div class="form-floating mb-3 contactForm d-flex">
+                                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                                <label for="floatingInput">Ton adresse Email </label>
+                                <input class="btn boutonValider" type="submit" value="Valider">
+                            </div>                        
+                        </div>
+                        <div class="methodContact">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
