--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&display=swap" rel="stylesheet">
             <!-- Filmo -->
-            <link href="//db.onlinewebfonts.com/c/2dd509271764ff079832bac8db2c5ac1?family=Filmotype+Austin" rel="stylesheet" type="text/css"/>        
-            <link rel="stylesheet" href="https://use.typekit.net/dwe6cyb.css">
+            <!-- <link href="//db.onlinewebfonts.com/c/2dd509271764ff079832bac8db2c5ac1?family=Filmotype+Austin" rel="stylesheet" type="text/css"/>        
+            <link rel="stylesheet" href="https://use.typekit.net/dwe6cyb.css"> -->
         <!-- Lien Iconify -->
         <script src="https://code.iconify.design/2/2.2.1/iconify.min.js" defer></script>
         <!-- Lien Font Awesome -->
@@ -84,7 +84,7 @@
                         </a>
                         <!-- Linkedin -->
                         <a href="https://www.linkedin.com/in/mathieu-mette/" target="_blank">
-                            <span class="iconify icon mm-linkedin" data-icon="akar-icons:linkedin-fill" style="font-size: 45px;"></span>
+                            <span class="iconify icon mm-linkedin" data-icon="akar-icons:linkedin-fill"></span>
                         </a>
                         <!-- Whatsapp -->
                         <a href="https://api.whatsapp.com/send?phone=0644354126" target="_blank">
@@ -92,11 +92,11 @@
                         </a>
                         <!-- Mail -->
                         <a href="mailto:mathieu@gmail.com" target="_blank">
-                            <span class="iconify icon mm-gmail" data-icon="ci:mail" style="font-size: 45px;"></span>                        
+                            <span class="iconify icon mm-gmail" data-icon="ci:mail"></span>                        
                         </a>
                         <!-- Cv pdf -->
                         <a target="_blank" href="assets/pdf/Curriculum Vitae - Mathieu METTE.pdf">
-                            <span class="iconify icon mm-cvPdf" data-icon="fa6-solid:file-pdf" style="font-size: 45px;"></span>                        
+                            <span class="iconify icon mm-cvPdf" data-icon="fa6-solid:file-pdf"></span>                        
                         </a>
                     </div>
                     <!-- Bouton en savoir plus -->
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-12 col-md-8 mm-textProfil p-4 p-lg-5">
+                    <div class="col-12 col-lg-8 mm-textProfil p-4 p-lg-5">
                         <p>Mathieu, 31 ans.</p>
                         <p>Je suis actuellement en formation "Webdesign et Communication Digitale" à La Manu, l'École des métiers du Numérique. </p> 
                         <p>Ancien responsable méthodes en mécaniques dans le domaine nucléaire, j'ai choisi de me reconvertir dans le webdesign afin d'élargir mon horizon professionnel et être au plus proche de ce que j'aime : créer du contenu pour le web.</p>
@@ -126,7 +126,7 @@
                         <p>J'ai su acqurérir un esprit d'équipe et des methodes de management qui me permette de savoir gérer une équipe avec joie.</p>
                         <p><span class="iconify-inline" data-icon="ri:team-fill" style="color: #fca311;"></span>Une équipe heureuse et encadrer c'est la clé <span class="iconify-inline" data-icon="fluent:key-multiple-20-filled" style="color: #fca311;"></span> de la réussite.</p>
                     </div>
-                    <div class="col-12 col-md-4 d-flex justify-content-center">
+                    <div class="col-12 col-lg-4 d-flex justify-content-center">
                         <img src="assets/img/mathieu_profil.png" class="img-fluid imgProfil" alt="">
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                     <div class="carousel-item active" id="manuRyla">
                         <div class="row CarouselFormations">
                             <!-- LA MANU -->
-                            <div class="col-6 card cardForm">
+                            <div class="col-6 col-md-12 card cardForm">
                                 <img src="assets/img/logo_La_Manu_formation.png" class="card-img-top" id="img-lamanu">
                                 <div class="card-body text-center">
                                     <div class="titlemission">
@@ -181,7 +181,7 @@
                                 </div>
                             </div>
                             <!-- RYLA -->
-                            <div class="col-6 card cardForm">
+                            <div class="col-6 col-md-12 card cardForm">
                                 <img src="assets/img/rotary-international-vector-logo.png" class="card-img-top" id="img-lamanu">
                                 <div class="card-body text-center">
                                     <div class="titlemission">RYLA</div>
@@ -198,7 +198,7 @@
                     <div class="carousel-item " id="btsBac">
                         <div class="row CarouselFormations">
                             <!-- BTS -->
-                            <div class="col-6 card cardForm">
+                            <div class="col-6 col-md-12 card cardForm">
                                 <img src="assets/img/logo-eucalyptus.png" class="card-img-top" id="img-lamanu">
                                 <div class="card-body text-center">
                                     <div class="titlemission">
@@ -217,7 +217,7 @@
                                 </div>
                             </div>
                             <!-- BAC -->
-                            <div class="col-6 card cardForm">
+                            <div class="col-6 col-md-12 card cardForm">
                                 <img src="assets/img/rouviere.png" class="card-img-top" id="img-lamanu">
                                 <div class="card-body text-center">
                                     <div class="titlemission ">
@@ -243,7 +243,7 @@
             <div class="titreCompetences text-start m-1">
                 Mes Compétences
             </div>
-            <div class="row">
+            <div class="row" id="rowComp">
                 <!-- Compétences graphique -->
                 <div class="col-12 col-lg-6 rainbow1">
                     <div class="titreLogiciels text-center">
