--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Polices d'écriture -->
             <!-- Comic -->
-            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&display=swap" rel="stylesheet"> -->
             <!-- Filmo -->
             <!-- <link href="//db.onlinewebfonts.com/c/2dd509271764ff079832bac8db2c5ac1?family=Filmotype+Austin" rel="stylesheet" type="text/css"/>        
             <link rel="stylesheet" href="https://use.typekit.net/dwe6cyb.css"> -->
