--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Polices d'écriture -->
-            <!-- Comic -->
-            <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&display=swap" rel="stylesheet"> -->
-            <!-- Filmo -->
-            <!-- <link href="//db.onlinewebfonts.com/c/2dd509271764ff079832bac8db2c5ac1?family=Filmotype+Austin" rel="stylesheet" type="text/css"/>        
-            <link rel="stylesheet" href="https://use.typekit.net/dwe6cyb.css"> -->
+        <meta name="description" content="Bienvenue sur le CV numérique de Mathieu METTE, tu pourras me découvrir autant personnellement que sur mon parcours professionnel">
+        <link rel="shortcut icon" type="image/ico" href="assets/img/favicon.ico"/>
         <!-- Lien Iconify -->
         <script src="https://code.iconify.design/2/2.2.1/iconify.min.js" defer></script>
         <!-- Lien Font Awesome -->
