--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Bienvenue sur le CV numérique de Mathieu METTE, tu pourras me découvrir autant personnellement que sur mon parcours professionnel">
         <link rel="shortcut icon" type="image/ico" href="assets/img/favicon.ico"/>
+        <!-- Font -->
+        <link href="//db.onlinewebfonts.com/c/2dd509271764ff079832bac8db2c5ac1?family=Filmotype+Austin" rel="stylesheet" type="text/css"/>
         <!-- Lien Iconify -->
         <script src="https://code.iconify.design/2/2.2.1/iconify.min.js" defer></script>
         <!-- Lien Font Awesome -->
