--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>
                 Il s'agit de mon premier site uniquement en codage HTML / CSS / JS
             </p>
-            <p>alors soit indulgent</p>
+            <p>alors sois indulgent</p>
             <p>😋</p>
             <button id="buttonModalEnter">C'est noté</button>
         </div>
@@ -681,7 +681,7 @@
                     <div id="formContact">
                         <div class="titreSocialMediaContact text-center">
                             <lord-icon src="https://cdn.lordicon.com/puvaffet.json" trigger="loop" colors="primary:#ffffff,secondary:#14131d" class="lordicon"> </lord-icon>                            
-                            Tu as aprecié me découvrir alors laisse ton mail
+                            Tu as apreccié me découvrir alors laisse ton mail
                             <div class="form-floating mb-3 contactForm d-flex">
                                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                                 <label for="floatingInput">Ton adresse Email </label>
